# ginger-scaffolder

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  metadata.toml  releaser.toml  services.toml
.github/workflows/: CI.yml  ci.yml
src/: main.rs  new.rs  utils.rs
