[package]
edition = "2021"
name = "ginger-scaffolder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = {version = "0.18.1"}
inquire = {version = "0.6.2", features = ["date"]}
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.166", features = ["derive"]}
serde_json = {version = "1.0.100"}
tokio = {version = "1", features = ["full"]}
