[package]
edition = "2021"
name = "ginger-scaffolder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.7", features = ["derive"]}
git2 = {version = "0.18.1"}
inquire = {version = "0.6.2", features = ["date"]}
regex = "1.10.5"
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.166", features = ["derive"]}
serde_json = {version = "1.0.100"}
tera = "1.20.0"
tokio = {version = "1", features = ["full"]}
walkdir = "2.5.0"
