[package]
description = "scaffolding cli"
edition = "2021"
name = "ginger-scaffolder"
version = "0.7.0-nightly.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
MetadataService = {path = "./MetadataService_client"}
clap = {version = "4.5.7", features = ["derive"]}
dirs = "5.0.1"
inquire = {version = "0.6.2", features = ["date"]}
regex = "1.10.5"
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.166", features = ["derive"]}
serde_json = {version = "1.0.100"}
tera = "1.20.0"
tokio = {version = "1", features = ["full"]}
walkdir = "2.5.0"

[target.'cfg(all(target_arch = "x86_64", not(target_os = "linux")))'.dependencies]
git2 = {version = "0.19.0", features = ["vendored-openssl"]}

[target.'cfg(any(target_arch = "aarch64", target_os = "linux", not(target_arch = "x86_64")))'.dependencies]
git2 = "0.19.0"

[package.metadata]
organization = "ginger-society"
